--- a/catalog.html
+++ b/catalog.html
@@ -68,77 +68,61 @@
               Корзина
             </a>
             <div class="popover-cart visually-hidden">
-              <div class="popover-cart-content">
-                <ul class="popover-cart-list">
-                  <li class="popover-cart-item cart-item">
-                    <img src="images/catalog/self1-catalog.jpg" width="39" height="43" alt="">
-                    <p>Любительская<br> селфи-палка</p>
-                    <button class="popover-cart-item-close" type="button"></button>
-                  </li>
-                  <li class="popover-cart-item cart-item">
-                    <img src="images/catalog/self2-catalog.jpg" width="39" height="43" alt="">
-                    <p>Профессиональная<br> селфи-палка</p>
-                    <button class="popover-cart-item-close" type="button"></button>
-                  </li>
-                  <li class="popover-cart-item popover-cart-price">
-                    <span>Товаров: 2</span>
-                    <span>Сумма: 2000 ₽</span>
-                  </li>
-                  <li class="popover-cart-item">
-                    <a class="button-open-cart" href="#">Открыть корзину</a>
-                  </li>
-                </ul>
-              </div>
-          </div>
+              <ul class="popover-cart-list">
+                <li class="popover-cart-item cart-item">
+                  <a class="popover-cart-link" href="#">
+                    <img src="images/catalog/self1-catalog.jpg" width="39" height="43" alt="Любительская селфи-палка.">
+                    <p class="popover-cart-paragraph">Любительская<br> селфи-палка</p>
+                  </a>
+                  <button class="popover-cart-item-close" type="button"></button>
+                </li>
+                <li class="popover-cart-item cart-item">
+                  <a class="popover-cart-link" href="#">
+                    <img src="images/catalog/self2-catalog.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
+                    <p class="popover-cart-paragraph">Профессиональная<br> селфи-палка</p>
+                  </a>
+                  <button class="popover-cart-item-close" type="button"></button>
+                </li>
+                <li class="popover-cart-item popover-cart-price">
+                  <span>Товаров: 2</span>
+                  <span>Сумма: 2000 ₽</span>
+                </li>
+                <li class="popover-cart-item">
+                  <a class="button-open-cart" href="#">Открыть корзину</a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
-        <ul class="navigation-list">
-          <li class="navigation-item navigation-catalog">
-            <a class="navigation-services navigation-popover-active" href="#">
-              Каталог товаров
-              <span class="navigation-icon-catalog">
-                <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#clip0_26956_603)">
-                  <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
-                  </g>
-                  <defs>
-                  <clipPath id="clip0_26956_603">
-                  <rect width="16" height="16"/>
-                  </clipPath>
-                  </defs>
-                </svg>
-                <svg class="navigation-icon-catalog-item" width="16" height="2" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M16 0H0V2H16V0Z" fill="black"/>
-                </svg>
-              </span>
-            </a>
-            <div class="popover visually-hidden">
-              <div class="popover-content">
-                  <ul class="popover-list">
-                    <li class="popover-list-item"><p>Виртуальная реальность</p></li>
-                    <li class="popover-list-item"><p>Моноподы для селфи</p></li>
-                    <li class="popover-list-item"><p>Экшн-камеры</p></li>
-                  </ul>
-                  <ul class="popover-list">
-                    <li class="popover-list-item"><p>Фитнес-браслеты</p></li>
-                    <li class="popover-list-item"><p>Умные часы</p></li>
-                  </ul>
-                  <ul class="popover-list">
-                    <li class="popover-list-item"><p>Квадрокоптеры</p></li>
-                  </ul>
-              </div>
-          </div>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-services navigation-services-margin" href="#">Гарантии</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-services navigation-services-margin" href="#">Контакты</a>
-          </li>
-        </ul>
+        <a class="navigation-services navigation-popover-active" href="#">
+          Каталог товаров
+          <span class="navigation-icon-catalog">
+            <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_26956_603)">
+              <path d="M16 7H9V0H7V7H0V9H7V16H9V9H16V7Z" fill="black"/>
+              </g>
+              <defs>
+              <clipPath id="clip0_26956_603">
+              <rect width="16" height="16"/>
+              </clipPath>
+              </defs>
+            </svg>
+            <svg class="navigation-icon-catalog-item" width="16" height="2" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16 0H0V2H16V0Z" fill="black"/>
+            </svg>
+          </span>
+        </a>
+    <ul class="navigation-list">
+      <li class="navigation-item">
+        <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
+      </li>
+      <li class="navigation-item">
+        <a class="navigation-services navigation-services-margin" href="#">Гарантия</a>
+      </li>
+      <li class="navigation-item">
+        <a class="navigation-services navigation-services-margin" href="#">Контакты</a>
+      </li>
+    </ul>
       </nav>
   </header>
 
@@ -255,8 +239,8 @@
               </select>
               <ul class="button-updown">
                 <li class="updown-item">
-                  <span class="visually-hidden">Вверх</span>
                   <a class="sorting-button-updown" href="#">
+                    <span class="visually-hidden">Вверх</span>
                     <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_26965_679)">
                       <path d="M6 0L11.5 10H0.5" fill="black"/>
@@ -270,8 +254,8 @@
                   </a>
                 </li>
                 <li class="updown-item">
-                  <span class="visually-hidden">Вниз</span>
                   <a class="sorting-button-updown" href="#">
+                    <span class="visually-hidden">Вниз</span>
                     <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <g clip-path="url(#clip0_26965_682)">
                       <path d="M6 10L0.499999 9.61651e-07L11.5 0" fill="black"/>
@@ -290,7 +274,7 @@
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
                   <img class="product-card-image" src="images/catalog/self1-catalog.jpg" width="360" height="380" alt="Любительская селфи-палка.">
-                  <h3 class="product-card-title">Любительская селфи-палка</h3>
+                  <h3 class="product-card-title">Любительская<br>селфи-палка</h3>
                   <b class="product-card-price">500 ₽</b>
                   <span class="button">Подробнее</span>
                 </a>
@@ -306,7 +290,7 @@
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
                   <img class="product-card-image" src="images/catalog/self3-catalog.jpg" width="360" height="380" alt="Непотопляемая селфи-палка.">
-                  <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+                  <h3 class="product-card-title">Непотопляемая<br>селфи-палка</h3>
                   <b class="product-card-price">2500 ₽</b>
                   <span class="button">Подробнее</span>
                 </a>
@@ -359,7 +343,8 @@
       <div class="page-footer-container">
         <div class="footer-contacts">
           <a class="logo-footer-link" href = "#">
-            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device.">
+            <span class="visually-hidden">Логотип html-academy</span>
+            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" width="145" height="36" alt="Логотип Device.">
           </a>
           <address class=" ">
             <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -420,6 +405,7 @@
         <div class="footer-contacts footer-contacts-right">
           <a class="footer-contacts-address-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
+            <span class="visually-hidden">Логотип html-academy</span>
             <svg class="html-academy-icon" fill="#FFC700" width="115" height="33" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
               <path d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z"/>
