--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
                 </svg>
                 Корзина
               </a>
-                <div class="popover-cart">
+                <div class="popover-cart visually-hidden">
                   <ul class="popover-cart-list">
                     <li class="popover-cart-item cart-item">
                       <a class="popover-cart-link" href="#">
-                        <img src="images/catalog/self1-catalog.jpg" width="39" height="43" alt="">
+                        <img src="images/catalog/self1-catalog.jpg" width="39" height="43" alt="Любительская селфи-палка.">
                         <p class="popover-cart-paragraph">Любительская<br> селфи-палка</p>
                       </a>
                         <button class="popover-cart-item-close" type="button"></button>
                     </li>
                     <li class="popover-cart-item cart-item">
                       <a class="popover-cart-link" href="#">
-                        <img src="images/catalog/self2-catalog.jpg" width="39" height="43" alt="">
+                        <img src="images/catalog/self2-catalog.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
                         <p class="popover-cart-paragraph">Профессиональная<br> селфи-палка</p>
                       </a>
                       <button class="popover-cart-item-close" type="button"></button>
@@ -95,9 +95,7 @@
                 </div>
             </li>
           </ul>
-          <ul class="navigation-list">
-            <li class="navigation-item navigation-catalog">
-              <a class="navigation-services navigation-popover-active" href="#">
+           <a class="navigation-services navigation-popover-active" href="#">
                 Каталог товаров
                 <span class="navigation-icon-catalog">
                   <svg class="navigation-icon-catalog-item" width="16" height="16" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
@@ -115,35 +113,7 @@
                   </svg>
                 </span>
               </a>
-              <div class="popover visually-hidden">
-                <div class="popover-content">
-                    <ul class="popover-list">
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Виртуальная реальность</a>
-                      </li>
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Моноподы для селфи</a>
-                      </li>
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Экшн-камеры</a>
-                      </li>
-                    </ul>
-                    <ul class="popover-list">
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Фитнес-браслеты</a>
-                        </li>
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Умные часы</a>
-                      </li>
-                    </ul>
-                    <ul class="popover-list">
-                      <li class="popover-list-item">
-                        <a class="popover-item-link" href="#">Квадрокоптеры</a>
-                      </li>
-                    </ul>
-                </div>
-            </div>
-            </li>
+          <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-services navigation-services-margin" href="#">Доставка</a>
             </li>
@@ -172,7 +142,7 @@
             <ol class="slider-pagination">
               <li class="slider-pagination-item">
                 <div class="slider-wrapper-images">
-                  <img class="slider-image" src="images/slider/copter.png" width="560" height="560" alt="Квадрокоптер">
+                  <img class="slider-image" src="images/slider/copter.png" width="560" height="480" alt="Квадрокоптер.">
                 </div>
                 <div class="slider-block">
                   <span class="slider-number">01</span>
@@ -191,7 +161,7 @@
               </li>
               <li class="slider-pagination-item visually-hidden">
                 <div class="slider-wrapper-images">
-                  <img class="slider-image" src="images/slider/smart-watch.png" width="560" height="560" alt="Фитнес-браслет">
+                  <img class="slider-image" src="images/slider/smart-watch.png" width="560" height="560" alt="Фитнес-браслет.">
                 </div>
                 <div class="slider-block">
                   <span class="slider-number">02</span>
@@ -207,7 +177,7 @@
               </li>
               <li class="slider-pagination-item visually-hidden">
                 <div class="slider-wrapper-images">
-                  <img class="slider-image" src="images/slider/self-stick.png" width="560" height="560" alt="Селфи-палка">
+                  <img class="slider-image" src="images/slider/self-stick.png" width="560" height="560" alt="Селфи-палка.">
                 </div>
                 <div class="slider-block">
                   <span class="slider-number">03</span>
@@ -230,11 +200,10 @@
             </ol>
             <ul class="slider-pagination-list">
               <li class="slider-pagination-number">
-                <span class="button-pagination-wrapper">
                   <button class="button-pagination button-pagination-active" type="button">
+                    <span class="button-pagination-wrapper"></span>
                     <span class="visually-hidden">Элемент пагинации</span>
                   </button>
-                </span>
               </li>
               <li class="slider-pagination-number">
                 <button class="button-pagination" type="button">
@@ -356,23 +325,23 @@
               <li class="services-list-item">
                 <div>
                   <h2 class="services-heading">Доставка</h2>
-                  <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                  <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
                 </div>
-                <img class="services-images" src="images/services/postman.svg" alt="Доставка.">
+                <img class="services-images" src="images/services/postman.svg" width="136" height="164" alt="Доставка.">
               </li>
               <li class="services-list-item visually-hidden">
                 <div>
                   <h2 class="services-heading">Гарантия</h2>
                   <p class="services-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
                 </div>
-                <img class="services-images" src="images/services/tools.svg" alt="Гарантии.">
+                <img class="services-images" src="images/services/tools.svg" width="171" height="195" alt="Гарантии.">
               </li>
               <li class="services-list-item visually-hidden">
                 <div>
                   <h2 class="services-heading">Кредит</h2>
                   <p class="services-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
                 </div>
-                <img class="services-images" src="images/services/deliveryman.svg" alt="Кредит.">
+                <img class="services-images" src="images/services/deliveryman.svg" width="156" height="188" alt="Кредит.">
               </li>
             </ul>
           </div>
@@ -410,8 +379,8 @@
           <div class="page-container-contact">
             <div class="contact-information-block">
               <h2 class="contact-heading">О нас</h2>
-              <p class="contact-paragraph">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-              <p class="contact-paragraph">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+              <p class="contact-paragraph">Огромный выбор гаджетов не оставит равнодушным<br>гика, который есть в каждом из нас.</p>
+              <p class="contact-paragraph">Мы можем доставить ваш товар в самые отдалённые<br> уголки России транспортными компаниями:</p>
               <ul class="contact-list">
                 <li class="contact-list-item">Меловые линии</li>
                 <li class="contact-list-item">СДИК</li>
@@ -421,7 +390,7 @@
             </div>
             <div class="contact-information-block">
               <h2 class="contact-heading">Контакты</h2>
-              <p class="contact-paragraph">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
+              <p class="contact-paragraph">Вы можете забрать товар сами, заехав в наш офис.<br> Заодно сможете проверить работоспособность покупки. </p>
               <b class="contact-text">Интернет-магазин «Девайс»</b>
               <p class="contact-paragraph">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p><p class="contact-phone">+7 (812) 812-12-12</p>
               <b class="contact-text">Время работы</b>
@@ -434,7 +403,9 @@
         <section class="distribution">
           <div class="page-container">
             <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
-            <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+            <div class="distribution-wrapper">
+              <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+            </div>
             <form class="distribution-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="email-distribution">Ваш e-mail</label>
               <input class="input-distribution" type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
@@ -452,8 +423,9 @@
     <footer class = "page-footer">
       <div class="page-footer-container">
         <div class="footer-contacts">
-          <a class="logo-footer-link" href = "#">
-            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device.">
+          <a class="logo-footer-link" href="#">
+            <span class="visually-hidden">Логотип html-academy</span>
+            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" width="145" height="36" alt="Логотип Device.">
           </a>
           <address class=" ">
             <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -514,6 +486,7 @@
         <div class="footer-contacts footer-contacts-right">
           <a class="footer-contacts-address-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
+            <span class="visually-hidden">Логотип html-academy</span>
             <svg class="html-academy-icon" fill="#FFC700" width="115" height="33" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
               <path d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z"/>
